--- a/front-end/src/app/shared/partials/sign/sign.component.scss
+++ b/front-end/src/app/shared/partials/sign/sign.component.scss
@@ -8,33 +8,46 @@ $btnRowHeight: 45px;
       display: block;
       width: 100%;
       .header__text {
-        float: left;
-        width: 55%;
+        display: block;
+        float: none;
+        width: 100%;
         @include media(tablet) {
-          width: 40%;
+          display: block;
+          float: none;
+          width: 100%;
         }
         @include media(mediumDesktop) {
+          float: left;
           width: 40%;
         }         
         @include media(largeDesktop) {
+          float: left;
           width: 40%;
         }         
       }
       .header__btns {
-        float: left;
+        display: block;
+        float: none;
         padding-top: 0;
-        text-align: right;
-        width: 30%;
+        text-align: left;
+        width: 100%;
         @include media(tablet) {
+          display: block;
+          float: none;
           padding-top: 0;
-          width: 50%;
+          text-align: left;
+          width: 100%;
         }
         @include media(mediumDesktop) {
+          float: left;
           padding-top: 0;
+          text-align: right;
           width: 50%;
         }         
         @include media(largeDesktop) {
+          float: left;
           padding-top: 0;
+          text-align: right;
           width: 50%;
         }         
         .btn-print-preview {
@@ -56,7 +69,38 @@ $btnRowHeight: 45px;
       display: block;
       position: relative;
       width: 100%;
-      .grid-r
+      .validate__form {
+        &.show-alerts {
+          display: block;
+          @include media(tablet) {
+            display: block;
+          }
+          @include media(mediumDesktop) {
+            display: none;
+          }         
+          @include media(largeDesktop) {
+            display: none;
+          }           
+        }
+        background-color: $bombay;
+        display: none;
+        height: 80px;
+        margin-top: 10px;
+        width: 100%;
+        @include media(tablet) {
+          background-color: $bombay;
+          display: none;
+          height: 80px;
+          margin-top: 10px;
+          width: 100%;        
+        }
+        @include media(mediumDesktop) {
+          display: none;
+        }         
+        @include media(largeDesktop) {
+          display: none;
+        }         
+      }      
       form {
         .form1-link {
           color: $dodgerBlue;
