--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -30,7 +30,7 @@
                       class="type-text"
                       (click)="updateTypeSelected('MST')"
                     >
-                      MST – Miscellaneous Report to FEC
+                      MST – Miscellaneous Text Submission to FEC
                     </label>
                     <div
                       class="type-radio"
