--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -1,7 +1,7 @@
 @import '../../../shared/scss/global';
 
 .forms__wizard {
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   width: 100%;  
@@ -30,14 +30,14 @@
     @include media(mediumDesktop) {
       display: inline-block;
       float: left;
-      min-height: 100%;
+      min-height: 100vh;
       position: relative;
       width: 100px;      
     }         
     @include media(largeDesktop) {
       display: inline-block;
       float: left;
-      min-height: 100%;
+      min-height: 100vh;
       position: relative;
       width: 100px;      
     }             
@@ -49,16 +49,19 @@
     @include clearfix();
   }
   .form__container {
-    height: 100vh;
+    min-height: 100vh;
     float: left;
     width: 99%;
     @include media(tablet) {
+      min-height: 100vh;
       width: 99%;
     }
     @include media(mediumDesktop) {
+      min-height: 100vh;
       width: 85%;
     }         
     @include media(largeDesktop) {
+      min-height: 100vh;
       width: 90%;
     }     
     &.show-alerts {
@@ -76,10 +79,10 @@
       }         
     }      
     .form__content {
-      height: 100%;
+      min-height: 100vh;
       width: 100%; 
       .form__step {
-        height: 100%;
+        min-height: 100vh;
         padding-left: 0;
         width: 100%;     
         @include media(tablet) {
