--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -1,7 +1,7 @@
 @import '../../../shared/scss/global';
 
 .forms__wizard {
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   width: 100%;  
@@ -12,7 +12,6 @@
       padding-left: 0;
       @include media(tablet) {
         display: none;
-        padding-left: 0;
       }
       @include media(mediumDesktop) {
         display: inline-block;
@@ -26,21 +25,19 @@
       }         
     }    
     @include media(tablet) {
-      display: block;
-      height: 40px;
-      width: 100%;
+      display: none;
     }
     @include media(mediumDesktop) {
       display: inline-block;
       float: left;
-      min-height: 100%;
+      min-height: 100vh;
       position: relative;
       width: 100px;      
     }         
     @include media(largeDesktop) {
       display: inline-block;
       float: left;
-      min-height: 100%;
+      min-height: 100vh;
       position: relative;
       width: 100px;      
     }             
@@ -52,10 +49,21 @@
     @include clearfix();
   }
   .form__container {
-    height: 100vh;
+    min-height: 100vh;
     float: left;
-    margin-left: 5px;
-    width: 90%;
+    width: 99%;
+    @include media(tablet) {
+      min-height: 100vh;
+      width: 99%;
+    }
+    @include media(mediumDesktop) {
+      min-height: 100vh;
+      width: 85%;
+    }         
+    @include media(largeDesktop) {
+      min-height: 100vh;
+      width: 90%;
+    }     
     &.show-alerts {
       padding-left: 0;
       @include media(tablet) {
@@ -67,11 +75,26 @@
       }         
       @include media(largeDesktop) {
         margin-left: 5px;
-        width: 70%; 
+        width: 76%; 
       }         
     }      
     .form__content {
-      width: 100%;    
+      min-height: 100vh;
+      width: 100%; 
+      .form__step {
+        min-height: 100vh;
+        padding-left: 0;
+        width: 100%;     
+        @include media(tablet) {
+          padding-left: 0;
+        }
+        @include media(mediumDesktop) {
+          padding-left: 5px;
+        }         
+        @include media(largeDesktop) {
+          padding-left: 5px;
+        }             
+      }   
     }
   } // .form__container
   @include clearfix();
