--- a/front-end/src/app/forms/form-99/form/form.component.html
+++ b/front-end/src/app/forms/form-99/form/form.component.html
@@ -1,13 +1,19 @@
 <div class="forms__wizard">
   <div 
     class="form__alerts"
-    [ngClass]="showValidateBar === true ? 'show-alerts' : ''"
+    [ngClass]="{
+      'show-alerts': showValidateBar === true,
+      'hide-alerts': step==='step_5'
+    }"
   >
     <app-validate></app-validate>
   </div>    
   <div 
     class="form__container"
-    [ngClass]="showValidateBar === true ? 'show-alerts' : ''"
+    [ngClass]="{
+      'show-alerts': showValidateBar === true,
+      'hide-alerts': step==='step_5'
+    }"
   >
     <div class="form__steps">
       <app-steps
@@ -22,7 +28,14 @@
       >
       </app-steps>
     </div>    
-    <div class="form__content" *ngIf="!isLoading">
+    <div 
+      class="form__content" 
+      *ngIf="!isLoading"
+      [ngClass]="{
+        'show-alerts': showValidateBar === true,
+        'hide-alerts': step==='step_5'
+      }"      
+    >
       <div
         class="form__step"
         [hidden]="step!=='step_1'"
