--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -110,12 +110,19 @@
           display: none;
         }         
       }      
-      .rich-text-editor {
+      .text-editor {
         margin-left: auto;
         margin-right: auto;
         margin-top: 20px;
         z-index: 0;
-        .angular-editor {
+        textarea {
+          border-radius: 3px;
+          font-size: 1em;
+          height: 500px;
+          overflow: scroll;
+          width: 98%;
+        }
+        /* .angular-editor {
           z-index: 0;
           .angular-editor-toolbar {
             .angular-editor-toolbar-set {
@@ -129,7 +136,7 @@
 
             }
           }
-        }
+        } */
         @include clearfix();
       } // .rich-text-editor
       .editor-character-count,
