--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -56,7 +56,7 @@
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--6">
               <ng-template #tipContent>
-                FEC Form 9 must be signed by the person making the electioneering communication, who is making a verified certification under penalty of perjury that the statement is correct.             
+                Only a treasurer or assistant treasurer designated on a Form 1 (Statement of Organization) may sign the report. 104.14(a)            
               </ng-template>            
               <h4>
                 Signee*
