--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -23,6 +23,9 @@
         float: left;
         width: 250px; 
       }         
+    }
+    &.hide-alerts {
+      display: none;
     }    
     @include media(tablet) {
       display: none;
@@ -30,14 +33,14 @@
     @include media(mediumDesktop) {
       display: inline-block;
       float: left;
-      min-height: 100vh;
+      min-height: 140vh;
       position: relative;
       width: 100px;      
     }         
     @include media(largeDesktop) {
       display: inline-block;
       float: left;
-      min-height: 100vh;
+      min-height: 140vh;
       position: relative;
       width: 100px;      
     }             
@@ -52,18 +55,6 @@
     min-height: 100vh;
     float: left;
     width: 99%;
-    @include media(tablet) {
-      min-height: 100vh;
-      width: 99%;
-    }
-    @include media(mediumDesktop) {
-      min-height: 100vh;
-      width: 85%;
-    }         
-    @include media(largeDesktop) {
-      min-height: 100vh;
-      width: 90%;
-    }     
     &.show-alerts {
       padding-left: 0;
       @include media(tablet) {
@@ -77,14 +68,43 @@
         margin-left: 5px;
         width: 76%; 
       }         
-    }      
+    } 
+    &.hide-alerts { 
+      width: 100%;
+      @include media(tablet) {
+        width: 100%;
+      }
+      @include media(mediumDesktop) {
+        width: 100%;
+      }         
+      @include media(largeDesktop) {
+        width: 100%;
+      }       
+    }    
+    @include media(tablet) {
+      min-height: 100vh;
+      width: 99%;
+    }
+    @include media(mediumDesktop) {
+      min-height: 100vh;
+      width: 85%;
+    }         
+    @include media(largeDesktop) {
+      min-height: 100vh;
+      width: 90%;
+    }          
     .form__content {
       min-height: 100vh;
       width: 100%; 
+      &.hide-alerts {
+        .form__step {
+          padding-left: 0 !important;
+        }
+      }
       .form__step {
         min-height: 100vh;
         padding-left: 0;
-        width: 100%;     
+        width: 100%; 
         @include media(tablet) {
           padding-left: 0;
         }
