--- a/front-end/src/app/forms/form-99/type/type.component.scss
+++ b/front-end/src/app/forms/form-99/type/type.component.scss
@@ -5,11 +5,11 @@
   width: 100%;
   .form__type {
     float: left;
-    height: 600px;
+    height: 400px;
     width: 100%;
     .type-list {
       list-style-type: none;
-      height: 530px;
+      // height: 530px;
       position: relative;
       margin-left: auto;
       margin-right: auto;
@@ -17,10 +17,9 @@
       .type-item {
         background-color: $alto;
         color: $black;
-        font-size: 0.85em;
-        padding-bottom: 15px;
-        padding-top: 15px;
         display: block;
+        font-size: 0.85em;
+        height: 90px;
         position: relative;
         float: left;
         width: 94%;
@@ -67,7 +66,7 @@
             }
             }
             &:checked ~ label {
-              color: $white;
+              color: $black;
             }
           }
           .type-radio {
@@ -76,9 +75,9 @@
             border: 5px solid $silverChalice;
             border-radius: 100%;
             cursor: pointer;
-            height: 25px;
-            width: 25px;
-            top: 60px;
+            height: 10px;
+            width: 10px;
+            top: 45px;
             left: 5px;
             z-index: 5;
             transition: border .25s linear;
@@ -97,10 +96,10 @@
               position: absolute;
               content: '';
               border-radius: 100%;
-              height: 15px;
-              width: 15px;
-              top: 5px;
-              left: 5px;
+              height: 10px;
+              width: 10px;
+              top: 0;
+              left: 0;
               margin: auto;
               transition: background 0.25s linear;
               -webkit-transition: background 0.25s linear;
