--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -58,6 +58,7 @@
             <div class="text-editor">
               <textarea 
                 placeholder="Enter text here..."
+                (keyup)="updateValidation()"
                 formControlName="reasonText"
               ></textarea>
             </div>
