--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -94,15 +94,15 @@
       width: 90%;
     }          
     .form__content {
-      // min-height: 100vh;
       width: 100%; 
       &.hide-alerts {
         .form__step {
           padding-left: 0 !important;
         }
+        margin: 0 auto;
+        width: 98%;
       }
       .form__step {
-        // min-height: 100vh;
         padding-left: 0;
         width: 100%; 
         @include media(tablet) {
