--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -120,7 +120,8 @@
           font-size: 1em;
           height: 400px;
           overflow: scroll;
-          width: 98%;
+          padding: 10px;
+          width: 96%;
         }
         /* .angular-editor {
           z-index: 0;
