sprint 5 - FNE-387, FNE-386, FNE-381, FNE-388, FNE-181

--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -118,9 +118,10 @@
         textarea {
           border-radius: 3px;
           font-size: 1em;
-          height: 500px;
+          height: 400px;
           overflow: scroll;
-          width: 98%;
+          padding: 10px;
+          width: 96%;
         }
         /* .angular-editor {
           z-index: 0;
