--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -1,7 +1,7 @@
 @import '../../../shared/scss/global';
 
 .forms__wizard {
-  min-height: 100vh;
+  min-height: 85vh;
   margin: 0;
   padding: 0;
   width: 100%;  
@@ -33,14 +33,14 @@
     @include media(mediumDesktop) {
       display: inline-block;
       float: left;
-      min-height: 140vh;
+      min-height: 100vh;
       position: relative;
       width: 100px;      
     }         
     @include media(largeDesktop) {
       display: inline-block;
       float: left;
-      min-height: 140vh;
+      min-height: 100vh;
       position: relative;
       width: 100px;      
     }             
@@ -94,15 +94,15 @@
       width: 90%;
     }          
     .form__content {
-      min-height: 100vh;
       width: 100%; 
       &.hide-alerts {
         .form__step {
           padding-left: 0 !important;
         }
+        margin: 0 auto;
+        width: 98%;
       }
       .form__step {
-        min-height: 100vh;
         padding-left: 0;
         width: 100%; 
         @include media(tablet) {
