--- a/front-end/src/app/shared/partials/preview/preview.component.scss
+++ b/front-end/src/app/shared/partials/preview/preview.component.scss
@@ -2,17 +2,65 @@
 
 .preview-container {
 	header {    
-	    .btn-print-preview {
-	      @extend .btn-secondary-gray;
-	      margin-right: 10px;
-	    }
-	    .btn-validate {
-	      @extend .btn-primary;
-	    }
-	    .btn {
-	      padding-top: 10px;
-	    }
-      	@include clearfix();		
+	    .header-container {
+	      display: block;
+	      width: 100%;
+	      .header__text {
+	        display: block;
+	        float: none;
+	        width: 100%;
+	        @include media(tablet) {
+	          display: block;
+	          float: none;
+	          width: 100%;
+	        }
+	        @include media(mediumDesktop) {
+	          float: left;
+	          width: 40%;
+	        }         
+	        @include media(largeDesktop) {
+	          float: left;
+	          width: 40%;
+	        }         
+	      }
+	      .header__btns {
+	        display: block;
+	        float: none;
+	        padding-top: 0;
+	        text-align: left;
+	        width: 100%;
+	        @include media(tablet) {
+	          display: block;
+	          float: none;
+	          padding-top: 0;
+	          text-align: left;
+	          width: 100%;
+	        }
+	        @include media(mediumDesktop) {
+	          float: left;
+	          padding-top: 0;
+	          text-align: right;
+	          width: 50%;
+	        }         
+	        @include media(largeDesktop) {
+	          float: left;
+	          padding-top: 0;
+	          text-align: right;
+	          width: 50%;
+	        }         
+	        .btn-print-preview {
+	          @extend .btn-secondary-gray;
+	          margin-right: 5px;
+	        }
+	        .btn-validate {
+	          @extend .btn-primary;
+	        }
+	        .btn {
+	          padding-top: 10px;
+	        }
+	      }
+	      @include clearfix();	
+		}
 	}
 	section {
 		.content {
