Mahendra's changes to report and types

--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -42,7 +42,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MST')"
                       >
-                        MST – Miscellaneous Report to FEC
+                        Miscellaneous Report to FEC(MST)
                       </label>
                       <div
                         class="type-radio"
@@ -88,7 +88,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSM')"
                       >
-                        MSM – Filing Frequency Chance Notice
+                        Filing Frequency Change Notice(MSM)
                       </label>
                       <div
                         class="type-radio"
@@ -134,7 +134,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSI')"
                       >
-                        MSI – Disavowal Response
+                        Disavowal Response(MST)
                       </label>
                       <div
                         class="type-radio"
@@ -181,7 +181,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSW')"
                       >
-                        MSW - C1 Loan Agreement
+                        C1 Loan Agreement (MSW)
                       </label>
                       <div
                         class="type-radio"
