--- a/front-end/src/app/reports/reports.component.scss
+++ b/front-end/src/app/reports/reports.component.scss
@@ -60,3 +60,15 @@
 .datatable tr:nth-chile(even){
   background-color: #dfe3ee;
 }
+
+.table-striped {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
