--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -5,7 +5,7 @@
   <div class="app__top">
     <nav class="navbar py-0 navbar-expand-lg">
       <div class="navbar-brand app__top-logo">
-        <a [routerLink]="['/dashboard']">
+        <a href="http://www.fec.gov/" target="_blank">
           <img src="assets/img/logo-transparent.png" />
         </a>
       </div>
